k8s/1-discovering-services/1-namspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled # this is necessary coz without this the istio proxy will not work
