k8s/1-discovering-services/3-product-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      name: product-template
      labels:
        app: product
    spec:
      containers:
        - name: product-microservice-container
          image: gcr.io/nomadic-mesh/microservice/product
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - port: 8000
      targetPort: 8000
      name: http-product-service
