k8s/1-discovering-services/4-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: default
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - microservice.retailvoice.xyz
        - user.microservice.retailvoice.xyz
        - product.microservice.retailvoice.xyz
