k8s/1-discovering-services/6-product-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtual-service
  namespace: default
spec:
  hosts:
    - product.microservice.retailvoice.xyz
  gateways:
    - ingressgateway
  http:
    - route:
        - destination:
            host: product-service.default.svc.cluster.local
            port:
              number: 8000
