k8s/1-discovering-services/7-microservice-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-virtual-service
  namespace: default
spec:
  hosts:
    - microservice.retailvoice.xyz
  gateways:
    - ingressgateway
  http:
    - name: user-http-route
      match:
        - uri:
            prefix: "/user"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: user-service.default.svc.cluster.local
            port:
              number: 8000
    - name: product-http-route
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port:
              number: 8000
      match:
        - uri:
            prefix: "/product"
      rewrite:
        uri: "/"
